--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">iBanking</string>
-    <string name="app_name_title">BSM</string>
-    <string name="app_name_desc">Bank Santri Munawwarah</string>
+    <string name="app_name">MINI BANK SANTRI</string>
+    <string name="app_name_title">MBS</string>
+    <string name="app_name_desc">MINI BANK SANTRI</string>
 </resources>
